removes animation from nav hover state because of a bug on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -147,8 +147,6 @@ nav a:visited {
     padding: 12px;
     border-radius: 2px 2px 0 0;
     text-decoration: none;
-    transition-property: color, background-color;
-    transition-duration: 200ms;
 }
 
 nav li.active a {
